# py-shinyswatch

./: .gitignore  .nojekyll  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  changelog.html  index.html  objects.json  pyrightconfig.json  robots.txt  search.json  setup.cfg  shinylive-sw.js  sitemap.xml
.github/workflows/: pytest.yaml  quartodoc.yaml  update-bootswatch.yaml
dev/: index.html  search.json
dev/reference/: get_theme.html  get_theme_deps.html  index.html  theme.cerulean.html  theme.cosmo.html  theme.cyborg.html  theme.darkly.html  theme.flatly.html  theme.journal.html  theme.litera.html  theme.lumen.html  theme.lux.html  theme.materia.html  theme.minty.html  theme.morph.html  theme.pulse.html  theme.quartz.html  theme.sandstone.html  theme.simplex.html  theme.sketchy.html  theme.slate.html  theme.solar.html  theme.spacelab.html  theme.superhero.html  theme.united.html  theme.vapor.html  theme.yeti.html  theme.zephyr.html  theme_picker_server.html  theme_picker_ui.html
docs/: .gitignore  _quarto-dev.yml  _quarto-readme.yml  _quarto.yml  _renderer.py  index.qmd  shiny.scss
docs/examples/darkly/: app.py  requirements.txt
docs/examples/plot-theming/: app.py  requirements.txt
docs/examples/theme-picker/: app.py
docs/releases/: v0.7.0.qmd
examples/basic-darkly/: app.py
examples/big-sketchy/: app.py
examples/components/: app.py
examples/page-sidebar/: app.py
examples/theme-picker/: app.py
reference/: get_theme.html  get_theme_deps.html  index.html  theme.add_nums.html  theme.cerulean.html  theme.cosmo.html  theme.cyborg.html  theme.darkly.html  theme.flatly.html  theme.journal.html  theme.litera.html  theme.lumen.html  theme.lux.html  theme.materia.html  theme.minty.html  theme.morph.html  theme.pulse.html  theme.quartz.html  theme.sandstone.html  theme.simplex.html  theme.sketchy.html  theme.slate.html  theme.solar.html  theme.spacelab.html  theme.superhero.html  theme.united.html  theme.vapor.html  theme.yeti.html  theme.zephyr.html  theme_picker_server.html  theme_picker_ui.html
scripts/: get_theme_values.py  update_bootswatch.R  update_bootswatch.py  update_themes.py
shinyswatch/: __init__.py  _assert.py  _bsw5.py  _get_theme.py  _get_theme_deps.py  _shiny.py  _shiny_theme.py  _theme.py  _theme_cdn.py  _theme_deps.py  _theme_picker.py  _theme_shinyswatch.py  _theme_utils.py  _themes.py  _typing_extensions.py  theme.py
shinyswatch/bsw5/cerulean/: bootswatch.css  bootswatch.min.css  colors.json  shinyswatch-ionRangeSlider.css
shinyswatch/bsw5/cosmo/: bootswatch.css  bootswatch.min.css  colors.json  shinyswatch-ionRangeSlider.css
shinyswatch/bsw5/cyborg/: bootswatch.css  bootswatch.min.css  colors.json  shinyswatch-ionRangeSlider.css
shinyswatch/picker/: theme_picker.css  theme_picker.js
site_libs/bootstrap/: bootstrap-e1a54f88e73924366f6c387e03cbdd64.min.css  bootstrap.min.css
tests/: __init__.py  test_theme_picker.py  test_themes.py
tests/bug_0025/: app.py
v0.7.0/: changelog.html  sitemap.xml
v0.7.0/reference/: index.html  theme.cerulean.html  theme.litera.html  theme.lumen.html  theme.morph.html  theme.sandstone.html  theme.simplex.html  theme.slate.html  theme.united.html  theme_picker_ui.html
v0.8.0/: changelog.html  index.html  search.json  sitemap.xml
v0.8.0/reference/: theme.cerulean.html  theme.cyborg.html  theme.litera.html  theme.lumen.html  theme.lux.html  theme.materia.html  theme.pulse.html  theme.sandstone.html  theme.sketchy.html  theme.superhero.html  theme.yeti.html  theme.zephyr.html
v0.9.0/: index.html  robots.txt  sitemap.xml
v0.9.0/_site/: objects.json
v0.9.0/reference/: theme.cerulean.html  theme.cosmo.html  theme.darkly.html  theme.litera.html  theme.lumen.html  theme.lux.html  theme.materia.html  theme.minty.html  theme.pulse.html  theme.quartz.html  theme.sandstone.html  theme.simplex.html  theme.sketchy.html  theme.slate.html  theme.spacelab.html  theme.superhero.html  theme.vapor.html  theme.zephyr.html  theme_picker_ui.html
(+288 files in other folders)
