[metadata]
name = shinyswatch
version = attr: shinyswatch.__version__
author = Barret Schloerke
author_email = barret@posit.co
url = https://github.com/schloerke/py-shinyswatch
description = Bootswatch themes built for Shiny.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = html
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Bug Tracker = https://github.com/schloerke/py-shinyswatch/issues
    Source Code = https://github.com/schloerke/py-shinyswatch

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    XStatic-bootswatch>=3.3.7.0
    typing-extensions>=3.10.0.0
    packaging>=20.9
    htmltools>=0.2.0
    shiny>=0.3.0
tests_require =
  pytest>=3
zip_safe = False

[options.extras_require]
test =
    pytest>=6.2.4
dev =
    black>=23.1.0
    flake8==5.0.4;python_version<="3.7"
    flake8>=6.0.0;python_version>"3.7"
    isort>=5.11.2
    pyright>=1.1.301
    pre-commit>=2.15.0
    wheel

[options.packages.find]
include = shinyswatch

[options.package_data]
shinyswatch = py.typed


[flake8]
ignore = E203, E302, E402, E501, F403, F405, W503
extend_exclude = docs, .venv, venv, typings, e2e, build

[isort]
profile=black
